...
    <string name="msg_check_your_email_to_reset_your_password">Email sent! Check your inbox to reset your password.</string>
    <string name="msg_invalid_email">Please type a valid e-mail</string>
    <string name="msg_new_user_agreement">By proceeding you are agreeing to our\n%1$s and %2$s</string>
    <string name="msg_more_than_ninety_nine_unread_messages" translatable="false">99+</string>
    <string name="msg_yesterday">Yesterday</string>
    <string name="msg_today">Today</string>
    <string name="msg_message">Message</string>
    <string name="msg_video_call">Video call</string>
    <string name="msg_join_video_call">Join video call</string>
    <string name="msg_this_room_is_read_only">This room is read only</string>
    <string name="msg_invalid_2fa_code">Invalid 2FA Code</string>
    <string name="msg_invalid_file">Invalid file</string>
    <string name="msg_invalid_server_url">Invalid server URL</string>
...
    <string name="msg_update_app_version_in_order_to_continue">Out to date server version. Please contact the server admin to update the server version in order to continue.</string>
    <string name="msg_ver_not_recommended">
        Looks like your server version is below the recommended version %1$s.\nYou can still login but you may experience unexpected behaviors.</string>
    <string name="msg_ver_not_minimum">
        Looks like your server version is below the minimum required version %1$s.\nPlease upgrade your server to login!
    </string>
    <string name="msg_no_chat_title">No chat messages</string>
    <string name="msg_no_chat_description">Start conversing to see your\nmessages here.</string>
    <string name="msg_http_insecure">When using HTTP you\'re connecting to an insecure server. We don\'t recommend you doing that.</string>
    <string name="msg_error_checking_server_version">An error has occurred while checking your server version, please try again</string>
    <string name="msg_invalid_server_protocol">The selected protocol is not accepted by this server, try using HTTPS</string>
    <string name="msg_image_saved_successfully">Image has been saved to gallery</string>
    <string name="msg_image_saved_failed">Failed to save image</string>
    <string name="msg_edited">(edited)</string>
...
    <string name="msg_continue_with_google">Continue with <b>Google</b></string>
    <string name="msg_continue_with_linkedin">Continue with <b>LinkedIn</b></string>
    <string name="msg_continue_with_gitlab">Continue with <b>GitLab</b></string>
    <string name="msg_continue_with_wordpress">Continue with <b>WordPress</b></string>
    <string name="msg_two_factor_authentication">Two-factor Authentication</string>
    <string name="msg_your_2fa_code">What’s your 2FA code?</string>
    <string name="msg_permalink_copied">Permalink copied</string>
    <string name="msg_no_topic">No topic</string>
    <string name="msg_no_announcement">No announcement</string>
    <string name="msg_no_description">No description</string>
    <string name="msg_send_email">Send email</string>
    <string name="msg_android_app_support">Android app support</string>
    <string name="msg_unable_to_update_password">Unable to update password. Error message: %1$s</string>
...
    <string name="msg_ready_only_channel">Read only channel</string>
    <string name="msg_ready_only_channel_description">Only admin can write new messages</string>
    <string name="msg_invite_members">Invite members to channel</string>
    <string name="msg_member_already_added">You have already selected this user</string>
    <string name="msg_member_not_found">Member not found</string>
    <string name="msg_channel_created_successfully">Channel created successfully</string>
    <string name="msg_message_copied">Message copied</string>
    <string name="msg_delete_message">Delete Message</string>
    <string name="msg_delete_description">Are you sure you want to delete this message?</string>
    <string name="msg_view_more">view more</string>
    <string name="msg_view_less">view less</string>
    <string name="msg_muted_on_this_channel">You are muted on this channel</string>

...
    <string name="message_unmuted">User %1$s unmuted by %2$s</string>
    <string name="message_role_add">%1$s was set %2$s by %3$s</string>
    <string name="message_role_removed">%1$s is no longer %2$s by %3$s</string>
    <string name="message_video_call_started">Video call started by %1$s</string>

    <!-- Message actions -->
    <string name="action_msg_reply">Reply</string>
    <string name="action_info">Info</string>
    <string name="action_msg_edit">Edit</string>
    <string name="action_msg_copy">Copy</string>
    <string name="action_msg_quote">Quote</string>
    <string name="action_msg_delete">Delete</string>
    <string name="action_pin">Pin</string>
    <string name="action_unpin">Unpin</string>
    <string name="action_star">Star</string>
    <string name="action_unstar">Unstar</string>
    <string name="action_msg_share">Share</string>
    <string name="action_title_editing">Editing Message</string>
    <string name="action_msg_add_reaction">Add reaction</string>
    <string name="action_msg_permalink">Permalink</string>
    <string name="action_msg_report">Report</string>

    <!-- Permission messages -->
    <string name="permission_editing_not_allowed">Editing is not allowed</string>
    <string name="permission_deleting_not_allowed">Deleting is not allowed</string>
    <string name="permission_pinning_not_allowed">Pinning is not allowed</string>
...
